refactor(api): improve type safety and error handling in API routes
fix: remove forced uppercase conversion in IMDB data import
style: improve UI interaction for import field selection
chore: update vercel project configuration

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectName":"trae_rasi_7kb7"}
+{"projectId":"prj_Itj35A5YqMEkiWOCKMwG4GBH8lDj","orgId":"team_QotTEQvounXTt3sbo6Ff89hp","projectName":"trae_rasi_7kb7","neverMindDeployCard":true}
